# oxide-engine

./: Cargo.toml  README.md  notes.md  test.sh
src/: asset_descriptions.rs  asset_library.rs  ecs.rs  engine_settings.rs  input.rs  lib.rs  main.rs  physics.rs  rendering.rs  state.rs  types.rs  ui.rs  utility.rs  vulkan.rs
src/assets/: asset.rs  asset_descriptions.rs  mod.rs
src/loaders/: gltf.rs  mod.rs  obj.rs
src/physics/: collider.rs  collision_handler.rs  rigidbody.rs
src/rendering/: mod.rs  render_meshes.rs  renderer_graph.rs  renderer_node.rs  rendering_component.rs
src/types/: buffers.rs  camera.rs  material.rs  matrices.rs  mesh.rs  model.rs  position.rs  quaternion.rs  shader.rs  staging_buffer.rs  static_mesh.rs  texture.rs  transform.rs  vectors.rs
src/ui/: mod.rs  ui_layout.rs  ui_mesh.rs  ui_rendering.rs  uibox.rs  uimanager.rs  uitext.rs
src/vulkan/: context.rs  memory.rs
