[package]
name = "simple-engine"
version = "0.0.2"
edition = "2021"

[dependencies]
vulkano = { version = "0.34.1", features = ["document_unchecked"] }
winit = { version = "0.29.10", features = ["rwh_05"] }
bytemuck = "1.14.0"
png = "0.17"
hecs = "0.10.4"
log = "0.4.21"
env_logger = "0.11.3"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = false

[build]
rustflags = ["-C", "target-cpu=native"]
