[package]
name = "oxide-engine"
version = "0.0.3"
edition = "2021"

[dependencies]
vulkano = { version = "0.34.1", features = ["document_unchecked"] }
winit = { version = "0.30.5", features = ["rwh_05"] }
ron = "0.8"
rmp-serde = "1.3.0"
serde = { version = "1", features = ["derive"] }
bytemuck = "1.14.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
hecs = "0.10.4"
tobj = "4.0.2"
gltf = "1.4.1"
image = "0.25.2"
log = "0.4.21"
env_logger = "0.11.3"
nalgebra = "0.33.0"
approx = "0.5.1"

[features]
dev_tools = []

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = false

[build]
rustflags = ["-C", "target-cpu=native"]
